# word_app

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
config/: config.yaml.example
config/prompts/: conversation.txt  explain.txt  game_intro.txt  game_qa.txt  grammar_conversation.txt  grender.txt  riddle.txt  translate.txt  verb_conversation.txt
scripts/: del_tab.py  words  words.bat  words.sh
src/word_app/: __init__.py  config.py  main.py
src/word_app/english/: __init__.py  llm.py  training.py  ui_manager.py  word_manager.py
src/word_app/utils/: __init__.py  common.py  obsidian.py  pager.py  voice.py
tests/: conftest.py  test_word_manager.py
